--- a/bsp/stm32/stm32u545-st-nucleo/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/bsp/stm32/stm32u545-st-nucleo/board/CubeMX_Config/CubeMX_Config.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
+GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.CPN=STM32U545RET6Q
 Mcu.ContextProject=TrustZoneDisabled
@@ -20,20 +20,16 @@ Mcu.IP7=USART1
 Mcu.IPNb=8
 Mcu.Name=STM32U545RETxQ
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13
-Mcu.Pin1=PA5
-Mcu.Pin10=VP_SYS_VS_tim6
-Mcu.Pin11=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin12=VP_THREADX_VS_RTOSJjThreadXJjLow_Power_Support
-Mcu.Pin2=PA9
-Mcu.Pin3=PA10
-Mcu.Pin4=PA13 (JTMS/SWDIO)
-Mcu.Pin5=PA14 (JTCK/SWCLK)
-Mcu.Pin6=VP_ICACHE_VS_ICACHE
-Mcu.Pin7=VP_PWR_VS_DBSignals
-Mcu.Pin8=VP_PWR_VS_SECSignals
-Mcu.Pin9=VP_PWR_VS_LPOM
-Mcu.PinsNb=13
+Mcu.Pin0=PA5
+Mcu.Pin1=PA9
+Mcu.Pin2=PA10
+Mcu.Pin3=VP_ICACHE_VS_ICACHE
+Mcu.Pin4=VP_PWR_VS_DBSignals
+Mcu.Pin5=VP_PWR_VS_SECSignals
+Mcu.Pin6=VP_PWR_VS_LPOM
+Mcu.Pin7=VP_SYS_VS_tim6
+Mcu.Pin8=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U545RETxQ
@@ -41,7 +37,6 @@ MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI13_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -49,33 +44,24 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:fa
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
-NVIC.SavedPendsvIrqHandlerGenerated=true
-NVIC.SavedSvcallIrqHandlerGenerated=true
-NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true\:false
+NVIC.SavedPendsvIrqHandlerGenerated=false
+NVIC.SavedSvcallIrqHandlerGenerated=false
+NVIC.SavedSystickIrqHandlerGenerated=false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.TIM6_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_IRQn
 NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA13\ (JTMS/SWDIO).Locked=true
-PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
-PA14\ (JTCK/SWCLK).Locked=true
-PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
-PA5.GPIOParameters=GPIO_Speed,GPIO_Label
-PA5.GPIO_Label=LED1
+PA5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA5.GPIO_Label=LED_GREEN
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA5.Locked=true
+PA5.PinState=GPIO_PIN_RESET
 PA5.Signal=GPIO_Output
-PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=BUTTON_USER
-PC13.Locked=true
-PC13.Signal=GPXTI13
 PWR.IPParameters=PowerMode
 PWR.PowerMode=PWR_SMPS_SUPPLY
 PinOutPanel.RotationAngle=0
@@ -97,8 +83,8 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Tx_LowPower.ioc
-ProjectManager.ProjectName=Tx_LowPower
+ProjectManager.ProjectFileName=Tx_Thread_Creation.ioc
+ProjectManager.ProjectName=Tx_Thread_Creation
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -107,7 +93,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-false,3-MX_ICACHE_Init-ICACHE-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ICACHE_Init-ICACHE-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -125,6 +111,7 @@ RCC.DACFreq_Value=32000
 RCC.EPOD_VALUE=4000000
 RCC.FCLKCortexFreq_Value=160000000
 RCC.FDCANFreq_Value=160000000
+RCC.FLatency=FLASH_LATENCY_4
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=160000000
 RCC.HSE_VALUE=16000000
@@ -134,9 +121,7 @@ RCC.I2C1Freq_Value=160000000
 RCC.I2C2Freq_Value=160000000
 RCC.I2C3Freq_Value=160000000
 RCC.I2C4Freq_Value=160000000
-RCC.I2C5Freq_Value=160000000
-RCC.I2C6Freq_Value=160000000
-RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACCLockSelectionVirtual,DACCLockSelectionVirtualString,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2C5Freq_Value,I2C6Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,RNGFreq_Value,SAESFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,USBPHYFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACCLockSelectionVirtual,DACCLockSelectionVirtualString,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2FRACN,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3FRACN,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,RNGFreq_Value,SAESFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
 RCC.LPTIM2Freq_Value=160000000
 RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
@@ -147,12 +132,15 @@ RCC.MCO1PinFreq_Value=160000000
 RCC.MDF1Freq_Value=160000000
 RCC.MSI_VALUE=4000000
 RCC.OCTOSPIMFreq_Value=160000000
+RCC.PLL2FRACN=0
 RCC.PLL2PoutputFreq_Value=258000000
 RCC.PLL2QoutputFreq_Value=258000000
 RCC.PLL2RoutputFreq_Value=258000000
+RCC.PLL3FRACN=0
 RCC.PLL3PoutputFreq_Value=258000000
 RCC.PLL3QoutputFreq_Value=258000000
 RCC.PLL3RoutputFreq_Value=258000000
+RCC.PLLFRACN=0
 RCC.PLLN=80
 RCC.PLLPoutputFreq_Value=160000000
 RCC.PLLQoutputFreq_Value=160000000
@@ -172,28 +160,20 @@ RCC.UART5Freq_Value=160000000
 RCC.USART1Freq_Value=160000000
 RCC.USART2Freq_Value=160000000
 RCC.USART3Freq_Value=160000000
-RCC.USART6Freq_Value=160000000
 RCC.USBFreq_Value=48000000
-RCC.USBPHYFreq_Value=160000000
 RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=4000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=320000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
-THREADX.IPParameters=TX_APP_MEM_POOL_SIZE,TX_LOW_POWER,TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_APP_THREAD_ENTRY,TX_APP_THREAD_NAME,TX_APP_SEM_CREATION,TX_SEMAPHORE_NAME,TX_LOW_POWER_TIMER_SETUP,TX_LOW_POWER_USER_TIMER_ADJUST
+THREADX.IPParameters=TX_APP_MEM_POOL_SIZE,TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_APP_THREAD_ENTRY,TX_APP_THREAD_NAME,TX_APP_THREAD_PRIO
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=true
 THREADX.TX_APP_MEM_POOL_SIZE=(3 * 1024)
-THREADX.TX_APP_SEM_CREATION=1
 THREADX.TX_APP_THREAD_ENTRY=MainThread_Entry
 THREADX.TX_APP_THREAD_NAME=Main Thread
-THREADX.TX_LOW_POWER=1
-THREADX.TX_LOW_POWER_TIMER_SETUP=\
-THREADX.TX_LOW_POWER_USER_TIMER_ADJUST=\
-THREADX.TX_SEMAPHORE_NAME=Semaphore
+THREADX.TX_APP_THREAD_PRIO=5
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
@@ -208,8 +188,6 @@ VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Mode=Core_Default
 VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Signal=THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-VP_THREADX_VS_RTOSJjThreadXJjLow_Power_Support.Mode=Low_Power_Support
-VP_THREADX_VS_RTOSJjThreadXJjLow_Power_Support.Signal=THREADX_VS_RTOSJjThreadXJjLow_Power_Support
 board=custom
-ProjectManager.Example=Tx_LowPower
+ProjectManager.Example=Tx_Thread_Creation
 ProjectManager.ExampleSource=CubeFw
